--- a/src/Views/AssumeUnchangedManager.axaml
+++ b/src/Views/AssumeUnchangedManager.axaml
@@ -10,25 +10,32 @@
         x:DataType="vm:AssumeUnchangedManager"
         Icon="/App.ico"
         Title="{DynamicResource Text.AssumeUnchanged}"
-        Background="{DynamicResource Brush.Window}"
+        Background="Transparent"
         Width="600" Height="400"
         CanResize="False"
         WindowStartupLocation="CenterOwner"
-        ExtendClientAreaToDecorationsHint="{OnPlatform True, Linux=False}"
-        ExtendClientAreaChromeHints="{OnPlatform NoChrome, Linux=Default}">
+        ExtendClientAreaToDecorationsHint="True"
+        ExtendClientAreaChromeHints="NoChrome"
+        SystemDecorations="{OnPlatform Full, Linux=None}">
   <Grid RowDefinitions="Auto,*">
+    <!-- Custom window shadow for Linux -->
+    <Border Grid.Row="0" Grid.RowSpan="2"
+            Background="{DynamicResource Brush.Window}"
+            Effect="drop-shadow(0 0 6 #A0000000)"
+            IsVisible="{OnPlatform False, Linux=True}"/>
+    
     <!-- TitleBar -->
-    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30" IsVisible="{OnPlatform True, Linux=False}">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*,Auto" Height="30">
       <Border Grid.Column="0" Grid.ColumnSpan="3"
               Background="{DynamicResource Brush.TitleBar}"
               BorderThickness="0,0,0,1" BorderBrush="{DynamicResource Brush.Border0}"
-              IsHitTestVisible="False"/>
+              PointerPressed="BeginMoveWindow"/>
       
       <Path Grid.Column="0"
             Width="14" Height="14"
             Margin="10,0,0,0"
             Data="{StaticResource Icons.File.Ignore}"
-            IsVisible="{OnPlatform False, Windows=True}"/>
+            IsVisible="{OnPlatform True, macOS=False}"/>
 
       <Grid Grid.Column="0" Classes="caption_button_box" Margin="2,4,0,0" IsVisible="{OnPlatform False, macOS=True}">
         <Button Classes="caption_button_macos" Click="CloseWindow">
@@ -48,61 +55,61 @@
       <Button Grid.Column="2"
               Classes="caption_button"
               Click="CloseWindow"
-              IsVisible="{OnPlatform False, Windows=True}">
+              IsVisible="{OnPlatform True, macOS=False}">
         <Path Data="{StaticResource Icons.Window.Close}"/>
       </Button>
     </Grid>
     
     <!-- Unchanged Files -->
-    <DataGrid Grid.Row="1"
-              Margin="8"
-              Background="{DynamicResource Brush.Contents}"
-              ItemsSource="{Binding Files}"
-              SelectionMode="Single"
-              CanUserReorderColumns="False"
-              CanUserResizeColumns="False"
-              CanUserSortColumns="False"
-              IsReadOnly="True"
-              HeadersVisibility="None"
-              Focusable="False"
-              RowHeight="26"
-              BorderThickness="1"
-              BorderBrush="{DynamicResource Brush.Border2}"
-              HorizontalScrollBarVisibility="Disabled"
-              VerticalScrollBarVisibility="Auto">
-      <DataGrid.Columns>
-        <DataGridTemplateColumn Width="*">
-          <DataGridTemplateColumn.CellTemplate>
-            <DataTemplate>
-              <StackPanel Orientation="Horizontal">
-                <Path Width="14" Height="14" Margin="8,0,4,0" Data="{StaticResource Icons.File}"/>
-                <TextBlock Text="{Binding}" Margin="4,0"/>
-              </StackPanel>
-            </DataTemplate>
-          </DataGridTemplateColumn.CellTemplate>
-        </DataGridTemplateColumn>
+    <Grid Grid.Row="1" Background="{DynamicResource Brush.Window}">
+      <DataGrid Margin="8"
+                Background="{DynamicResource Brush.Contents}"
+                ItemsSource="{Binding Files}"
+                SelectionMode="Single"
+                CanUserReorderColumns="False"
+                CanUserResizeColumns="False"
+                CanUserSortColumns="False"
+                IsReadOnly="True"
+                HeadersVisibility="None"
+                Focusable="False"
+                RowHeight="26"
+                BorderThickness="1"
+                BorderBrush="{DynamicResource Brush.Border2}"
+                HorizontalScrollBarVisibility="Disabled"
+                VerticalScrollBarVisibility="Auto">
+        <DataGrid.Columns>
+          <DataGridTemplateColumn Width="*">
+            <DataGridTemplateColumn.CellTemplate>
+              <DataTemplate>
+                <StackPanel Orientation="Horizontal">
+                  <Path Width="14" Height="14" Margin="8,0,4,0" Data="{StaticResource Icons.File}"/>
+                  <TextBlock Text="{Binding}" Margin="4,0"/>
+                </StackPanel>
+              </DataTemplate>
+            </DataGridTemplateColumn.CellTemplate>
+          </DataGridTemplateColumn>
 
-        <DataGridTemplateColumn>
-          <DataGridTemplateColumn.CellTemplate>
-            <DataTemplate>
-              <Button Classes="icon_button"
-                      Command="{Binding $parent[v:AssumeUnchangedManager].DataContext.(vm:AssumeUnchangedManager).Remove}"
-                      CommandParameter="{Binding}">
-                <Path Width="14" Height="14" Data="{StaticResource Icons.Clear}"/>
-              </Button>
-            </DataTemplate>
-          </DataGridTemplateColumn.CellTemplate>
-        </DataGridTemplateColumn>
-      </DataGrid.Columns>
-    </DataGrid>
+          <DataGridTemplateColumn>
+            <DataGridTemplateColumn.CellTemplate>
+              <DataTemplate>
+                <Button Classes="icon_button"
+                        Command="{Binding $parent[v:AssumeUnchangedManager].DataContext.(vm:AssumeUnchangedManager).Remove}"
+                        CommandParameter="{Binding}">
+                  <Path Width="14" Height="14" Data="{StaticResource Icons.Clear}"/>
+                </Button>
+              </DataTemplate>
+            </DataGridTemplateColumn.CellTemplate>
+          </DataGridTemplateColumn>
+        </DataGrid.Columns>
+      </DataGrid>
 
-    <!-- Empty -->
-    <StackPanel Grid.Row="2"
-                Orientation="Vertical"
-                HorizontalAlignment="Center" VerticalAlignment="Center"
-                IsVisible="{Binding Files.Count, Converter={x:Static c:IntConverters.IsZero}}">
-      <Path Width="48" Height="48" Data="{StaticResource Icons.Empty}" Fill="{DynamicResource Brush.FG2}"/>
-      <TextBlock Margin="0,16,0,0" Text="{DynamicResource Text.AssumeUnchanged.Empty}" Foreground="{DynamicResource Brush.FG2}"/>
-    </StackPanel>
+      <!-- Empty -->
+      <StackPanel Orientation="Vertical"
+                  HorizontalAlignment="Center" VerticalAlignment="Center"
+                  IsVisible="{Binding Files.Count, Converter={x:Static c:IntConverters.IsZero}}">
+        <Path Width="48" Height="48" Data="{StaticResource Icons.Empty}" Fill="{DynamicResource Brush.FG2}"/>
+        <TextBlock Margin="0,16,0,0" Text="{DynamicResource Text.AssumeUnchanged.Empty}" Foreground="{DynamicResource Brush.FG2}"/>
+      </StackPanel>
+    </Grid>    
   </Grid>
 </Window>
