style: margins for fixed-size window on Linux platform

--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -20,7 +20,7 @@
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
         SystemDecorations="{OnPlatform Full, Linux=None}">
-  <Grid RowDefinitions="Auto,Auto">
+  <Grid RowDefinitions="Auto,Auto" Margin="{OnPlatform 0, Linux=6}">
     <!-- Custom window shadow for Linux -->
     <Border Grid.Row="0" Grid.RowSpan="2"
             Background="{DynamicResource Brush.Window}"
