--- a/src/Views/AssumeUnchangedManager.axaml
+++ b/src/Views/AssumeUnchangedManager.axaml
@@ -17,7 +17,7 @@
         ExtendClientAreaToDecorationsHint="True"
         ExtendClientAreaChromeHints="NoChrome"
         SystemDecorations="{OnPlatform Full, Linux=None}">
-  <Grid RowDefinitions="Auto,*">
+  <Grid RowDefinitions="Auto,*" Margin="{OnPlatform 0, Linux=6}">
     <!-- Custom window shadow for Linux -->
     <Border Grid.Row="0" Grid.RowSpan="2"
             Background="{DynamicResource Brush.Window}"
