feature: allow user to control whether or not to enable syntax highlighting in DiffView.

--- a/src/SourceGit/Views/DiffView.axaml
+++ b/src/SourceGit/Views/DiffView.axaml
@@ -26,14 +26,23 @@
             <Path Classes="rotating" Width="10" Height="10" Margin="8,0" Data="{DynamicResource Icons.Loading}" IsVisible="{Binding IsLoading}"/>
           </StackPanel>
 
-          <StackPanel Grid.Column="2" Margin="32,0,0,0" Orientation="Horizontal" IsVisible="{Binding IsTextDiff}" VerticalAlignment="Center">            
+          <StackPanel Grid.Column="2" Margin="32,0,0,0" Orientation="Horizontal" IsVisible="{Binding IsTextDiff}" VerticalAlignment="Center">
+            <ToggleButton Classes="line_path"
+                          Width="32" Height="18"
+                          Background="Transparent"
+                          Padding="9,6"
+                          IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSyntaxHighlighting, Mode=TwoWay}"
+                          ToolTip.Tip="{DynamicResource Text.Diff.SyntaxHighlight}">
+              <Path Width="13" Height="13" Data="{StaticResource Icons.SyntaxHighlight}" Margin="0,3,0,0"/>
+            </ToggleButton>
+
             <ToggleButton Classes="line_path"
                           Width="32" Height="18"
                           Background="Transparent"
                           Padding="9,6"
                           IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=UseSideBySideDiff, Mode=TwoWay}"
                           ToolTip.Tip="{DynamicResource Text.Diff.SideBySide}">
-              <Path Width="12" Height="12" Data="{StaticResource Icons.SideBySide}"/>
+              <Path Width="12" Height="12" Data="{StaticResource Icons.SideBySide}" Margin="0,2,0,0"/>
             </ToggleButton>
             
             <Button Classes="icon_button" Width="32" Command="{Binding OpenExternalMergeTool}" ToolTip.Tip="{DynamicResource Text.Diff.UseMerger}">
