--- a/src/SourceGit/Resources/Styles.axaml
+++ b/src/SourceGit/Resources/Styles.axaml
@@ -1,5 +1,7 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:vm="using:SourceGit.ViewModels"
+        xmlns:c="using:SourceGit.Converters"
         xmlns:ae="using:AvaloniaEdit"
         xmlns:aes="using:AvaloniaEdit.Search">
   <Design.PreviewWith>
@@ -11,6 +13,10 @@
     <Style.Resources>
       <x:Double x:Key="ScrollBarSize">12</x:Double>
     </Style.Resources>
+  </Style>
+
+  <Style Selector="ContentPresenter">
+    <Setter Property="FontFamily" Value="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFont, Converter={x:Static c:StringConverters.ToFontFamily}}"/>
   </Style>
 
   <Style Selector="Path">
@@ -64,7 +70,7 @@
     <Setter Property="FontStyle" Value="Italic"/>
   </Style>
   <Style Selector="TextBlock.monospace">
-    <Setter Property="FontFamily" Value="fonts:SourceGit#JetBrains Mono"/>
+    <Setter Property="FontFamily" Value="{Binding Source={x:Static vm:Preference.Instance}, Path=MonospaceFont, Converter={x:Static c:StringConverters.ToFontFamily}}"/>
   </Style>
   <Style Selector="TextBlock.group_header_label">
     <Setter Property="Foreground" Value="{DynamicResource Brush.FG2}"/>
